--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navy Seminovos</title>
-    <link rel="shortcut icon" href="src/assets/android-icon-144x144-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="src/assets/favicon.png" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
