--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navy Seminovos</title>
-    <link rel="shortcut icon" href="src/assets/favicon.png" type="image/x-icon">
+    <link id="favicon" rel="shortcut icon" href="" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
